@@ -2,6 +2,11 @@ Revision history for Class-Tiny
 
 {{$NEXT}}
 
+    [INTERNAL]
+
+    - Refactored accessor generation to allow subclasses of Class::Tiny
+      to implement alternate accessors.
+
 1.001     2015-01-30 21:13:07-05:00 America/New_York
 
     [ADDED]
